# PracticeBuildQtByCMake

./: .gitignore  CMakeLists.txt  CommandLineBuild.md  README.md  deploy.bat
test_cmake/: mainwindow.cpp  mainwindow.ui
test_cmake/test_subdir_dll/: CMakeLists.txt  dll_export.cpp
test_cmake/test_subdir_exe/: CMakeLists.txt  main.cpp  mathfunc.cpp  mathfunc.h
